# stoneydsp.com

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  .gitmodules  .prettierrc  .vercelignore  400.html  401.html  402.html  403.html  404.html  405.html  418.html  429.html  500.html  501.html  502.html  503.html  504.html  CMakeLists.txt  CMakePresets.json  CNAME  CppProperties.json  LICENSE  README.md  StoneyDSP.sln  biquads.html  contact.html  contact.txt  custom-tailwind.config.ts  headers.md  index.html  index.js  index.txt  links.txt  manifest.webmanifest  mdx-components.tsx  middleware.js  (+25 more)
.github/: dependabot.yml
.github/workflows/: supabase-deploy-functions.yml  supabase-deploy.yml
_logs/: logs_result_2023_10_11_0514.csv  logs_result_2023_10_11_1518.json  logs_result_2023_10_30-02_29.csv  logs_result_2023_10_30-02_29.json  logs_result_2023_11_10_0905.csv  logs_result_2023_11_10_1444.csv  logs_result_2023_11_10_1444.json  stipe_logs_result.csv  supabase_auth_logs_2023_24_10_0525.csv  supabase_logs_2023_24_10_0525.csv  supabase_postgres_logs_2023_24_10_0525.csv
_next/static/chunks/: webpack-87ee570c003f2b91.js
_next/static/css/: 1cca1013497a05d9.css  24822f3ec4fbb9ff.css  3a6e8030ea642e9a.css  5eb273d80d07edc0.css  667720676037d345.css  8f919db0eba18c99.css  9711252d15c2f208.css  d47a3a303193e7d5.css
_utils/: supabase-admin.tsx  supabase-provider.tsx  supabase.tsx
_utils/themes/: language_colours.json  themes.tsx
about/: index.html
api/: darkmode_toggle.js  dynsections.js  index.d.ts  index.js  index.ts  menu.js  menudata.js  vitals.js
api/404/: index.js
api/418/: index.js  index.ts
api/_shared/: content.ts  headers.ts  statuses.ts  useragents.ts  utils.ts
api/bot/: index.js
api/decode/: index.js  index.ts
api/encode/: index.js  index.ts
api/headers/: index.ts
api/svg/: index.ts
api/switch/: index.ts
api/vitals/: index.js
api/webhook/: index.ts  route.ts
app/: actions.tsx  auth-form.tsx  content.tsx  database.types.ts  error.tsx  footer.tsx  global-error.tsx  globals.css  home.tsx  icon.tsx  layout.module.css  layout.tsx  manifest.tsx  manifest.webmanifest  manifest.webmanifest.tsx  meta.tsx  navbar.tsx  not-found.tsx  page.tsx  providers.tsx  robots.tsx  site.webmanifest.tsx  spinner.tsx  styles.css  supabase-provider.tsx  supabase-server.tsx  template.module.css  template.tsx  types_db.d.ts
app/about/: about.module.css  about.tsx  about_content.tsx  content.tsx  page.tsx
app/account/: account-form.tsx  account.css  avatar.tsx  content.tsx  page.tsx
app/api/: index.ts
app/blog/: not-found.tsx  page.tsx
app/contact/: contact.tsx  contact_content.tsx  content.tsx  page.tsx
app/countries/: page.tsx
app/docs/: content.tsx  page.tsx
app/example/: page.tsx
app/home/: home.module.css  home.tsx
app/login/: auth-form.tsx  content.tsx  login.tsx  next-auth.tsx  old-page.tsx  page.tsx  supabase-auth.tsx
app/privacy-policy/: page.tsx  pp.tsx  pp_content.tsx
app/projects/: content.tsx  error.tsx  page.tsx  projects.tsx  projects_content.tsx
app/route-handler/: route.ts
app/site-map/: sitemap.tsx
app/sitemap/: page.tsx
app/terms-of-service/: page.tsx  tos.tsx  tos_content.tsx
app/www/: content.tsx  page.tsx  template.tsx
assets/: main.css  styles.css
assets/css/: styles.css
assets/doxygen/: doxygen.css
assets/icons/: logs_result_2023_11_08_1816.csv  logs_result_2023_11_08_1816.json
assets/init/: reset.css
assets/js/: generate-sitemap.mjs
components/: BackButton.tsx  Blur.tsx  DeployButton.tsx  Footer.tsx  HRGradient.tsx  Logo.tsx  MDXCache.tsx  NavBar.tsx  StoneyDSPBadge.tsx  SupabaseLogo.tsx  SupabseSSR.tsx  badge.css
components/blog/: card.tsx  newpost.tsx  rtlist.tsx  rtpost.tsx
components/cards/: index.tsx
components/elements/: index.tsx
components/icons/: icons.d.ts
components/layouts/: Account.tsx  AuthError.tsx  AuthForm.tsx  BackToHome.tsx  BackToTop.tsx  FlexColCenter.tsx  Login-old.tsx  Ribbon.tsx  Spinner.module.css  Spinner.tsx  TextLargeBoldCenter.tsx  index.tsx
components/modal/: index.tsx  leaflet.tsx  provider.tsx
components/spinner/: spinner.tsx
contact/: index.html
css/: main.css  main.css.map  main.scss
fixtures/: stripe-fixtures.json
internals/: generate-sitemap.mjs
lib/: utils.ts
lib/Typography/: index.tsx
lib/codes/: ok.ts
lib/headers/: CSP.ts  URL.ts  WWW.tsx  index.ts
lib/mail/: send.ts
lib/mdx/: mdxFetch.ts  mdxParse.ts
lib/supabase/: middleware.ts  server.ts
lib/url/: index.ts
logs/: logs_result_2023_10_11_1518.csv  logs_result_2023_11_10_0905.csv  logs_result_2023_11_10_0905.json  supabase_logs.csv
projects/: biquads.txt  cxxwin.html  index.html  msys2-toolchain.html  msys2-toolchain.txt  nonlinearfilters.html  nonlinearfilters.txt  orfanidisbiquad.html  ubento.txt
projects/biquads/: index.html
projects/cxxwin/: index.html
projects/ubento/: index.html
public/: browserconfig.xml  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  doxygen_defaults.css  files.html  globals.html  globals_func.html  humans.txt  index.html  manifest.json  menu.js  menudata.js  privacy_policy.txt  robots.txt  sitemap.xml  www_sitemap.xml
public/favicon/: site.webmanifest
public/latex/: index.tex  refman.tex
public/search/: all_0.js  all_1.js
styles/: global.css
supabase/: .gitignore  config.toml
supabase/functions/: import_map.json
supabase/migrations/: 20231004005147_remote_schema.sql  20231022171633_remote_schema.sql
types/: environment.d.ts  index.d.ts  manifest.d.ts  supabase.d.ts  themes.d.ts
types/images/: iconsvg.d.ts
types/meta/: index.d.ts  robots.d.ts  sitemap.d.ts
utils/: helpers.tsx  stripe.tsx  supabase-admin.tsx  supabase-server.tsx
utils/captcha/: turnstile.ts
utils/headers/: CORS.ts  CSP.ts  generateCSP.ts  middleware.ts
utils/hooks/: use-window-size.ts
utils/logger/: index.ts
utils/mail/: send.ts
utils/mdx/: mdxFetch.ts
utils/router/: index.ts
utils/supabase/: client.ts  middleware.ts  server.ts  storage.ts
utils/sync/: post.ts
utils/themes/: themes.d.ts
(+306 files in other folders)
